# SpaceS

./: .gitignore  Cargo.toml  README.md
design/: icon.afdesign
src/: application.rs  graphics.rs  main.rs  simulation.rs
