[package]
name = "simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = { version = "0.0.12" }
derive-new = { version = "0.7.0" }
winit = { version = "0.30.11" }
getset = { version = "*" }
anyhow = { version = "*" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
wgpu = { version = "25.0.2" }
colored = { version = "*" }
strum = "0.26"
strum_macros = "0.26"
pollster = { version = "*" }
imgui = { version = "0.12.0" }
imgui-winit-support = { version = "0.13.0" }
imgui-wgpu = { version = "0.25.0" }
image = { version = "*" }
mint = { version = "*" }
